@@ -54,8 +54,8 @@ class Simulator(bs._BaseSimulator):
         self.setResultFile(modelName.split(".")[-1])
 
         self.setSolver("radau")
-        self._MODELICA_EXE = 'dymola'
-        self._showGUI = False
+        # Set self._MODELICA_EXE = 'dmc' and self._showGUI = False, and make sure it is on the path.
+        self.showGUI(False)
 
     def addPreProcessingStatement(self, command):
         """Adds a pre-processing statement to the simulation script.
@@ -362,7 +362,23 @@ simulateModel(modelInstance, startTime={start_time}, stopTime={stop_time}, metho
 
         By default, the simulator runs without GUI
         """
+        self._MODELICA_EXE = 'dmc' if not show else 'dymola'
         self._showGUI = show
+        # Check if executable is on the path and if dmc is available (dmc was
+        # introduced in Dymola 2025x)
+        if not self.isExecutable(self._MODELICA_EXE):
+            if self._MODELICA_EXE == 'dmc':
+                #                em = f"Did not find executable 'dmc', which was introduced in Dymola 2025x. Will use dymola instead."
+                #                self._reporter.writeOutput(em)
+                self._MODELICA_EXE = 'dymola'
+                self._showGUI = False  # If dmc was selected, we don't want to show the GUI
+
+        # Check again for executable, as it may be overridden above
+        if not self.isExecutable(self._MODELICA_EXE):
+            em = f"Error: Did not find executable '{self._MODELICA_EXE}'. "
+            em += f"Make sure it is on the PATH variable of your operating system."
+            raise RuntimeError(em)
+
         return
 
     def _runSimulation(self, mosFile, timeout, directory):
@@ -378,11 +394,23 @@ simulateModel(modelInstance, startTime={start_time}, stopTime={stop_time}, metho
         # This is needed for example if the simulation is run in a docker,
         # which may have a different file structure than the host.
         mo_fil = mosFile.replace(directory, ".")
-        # List of command and arguments
+        # List of command and arguments.
+        # self._MODELICA_EXE is either dmc or dymola.
         if self._showGUI:
-            cmd = [self._MODELICA_EXE, mo_fil]
+            cmd = [
+                self._MODELICA_EXE,
+                '-r',
+                mo_fil] if self._MODELICA_EXE == 'dmc' else [
+                self._MODELICA_EXE,
+                mo_fil]
         else:
-            cmd = [self._MODELICA_EXE, mo_fil, "/nowindow"]
+            cmd = [
+                self._MODELICA_EXE,
+                '-r',
+                mo_fil] if self._MODELICA_EXE == 'dmc' else [
+                self._MODELICA_EXE,
+                mo_fil,
+                "/nowindow"]
 
         env = super().prependToModelicaPath(os.environ.copy(), self._packagePath)
 
