@@ -4,6 +4,9 @@ BuildingsPy Changelog
 Version 5.2.0, xxxx
 ^^^^^^^^^^^^^^^^^^^
 
+- In buildingspy/simulate/Dymola.py and in buildingspy/development/regressiontest.py,
+  switched simulator from dymola to dmc unless a gui window is requested.
+  (https://github.com/lbl-srg/BuildingsPy/issues/590)
 - In buildingspy/simulate/OpenModelica.py, added support for setNumberOfIntervals.
   (https://github.com/lbl-srg/BuildingsPy/issues/585)
 - In buildingspy/simulate/OpenModelica.py, changed loading of Modelica libraries.
